[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sato_exp"
version = "0.1.0"
description = "Lattice reduction algorithms with C++ backend"
authors = [
    {name = "Arata Sato", email = "25rc001d@rikkyo.ac.jp"}
]
license = {text = "LGPL-2.1-or-later OR MPL-2.0"}
dependencies = [
    "numpy",
    "pandas"
]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
include = ["sato_exp*"]

[tool.setuptools.package-data]
"sato_exp" = ["svp_challenge_list/*.txt"]
